# script-starter-py

./: README.md  script-starter-py.code-workspace
projects/script-starter-py/: .algokit.toml  README.md  pyproject.toml
projects/script-starter-py/.algokit/: .copier-answers.yml
projects/script-starter-py/.tours/: getting-started-with-your-algokit-project.tour
projects/script-starter-py/scripts/: __main__.py
